Fix "saving" div, set display: none it when it isn't active
[#95683166]

So it doesn't overlap and doesn't block any other elements (e.g. buttons).

--- a/app/assets/stylesheets/save-on-change.scss
+++ b/app/assets/stylesheets/save-on-change.scss
@@ -14,6 +14,7 @@
   right: 20px;
   background-color: rgba( lighten($med-blue, 20%), 0.9 );
   border: 1px solid lighten($med-blue, 17%);
+  display: none;
   @include border-radius(3px);
   @include trans;
   &.error {
@@ -23,6 +24,9 @@
   }
   &.saved {
     // background-color: #EEE;
+  }
+  &.msg-visible {
+    display: block;
   }
 }//save
 .question.did_try_to_navigate {
